Improved contrast, fixed bugs

--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ a {
     height: 100vh;
     position: absolute;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.404);
+    background-color: rgba(0, 0, 0, 0.204);
     -webkit-backdrop-filter: blur(2rem);
     backdrop-filter: blur(2rem);
     overflow-y: scroll;
